--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    background-image: url('https://raw.githubusercontent.com/angular/angular.js/master/images/logo/AngularJS-Shield.exports/AngularJS-Shield-medium.png');
+    background-image: url('images/robo_160.png');
     background-size: contain;
     background-repeat: no-repeat;
-    width: 33%;
-    height: 33%;
+    width: 100%;
+    height: 100%;
     z-index: -1;
-    opacity: 0.5;
+    opacity: 0.3;
     pointer-events: none;
 }
 
@@ -26,7 +26,7 @@ body {
 
 #map {
     height: 100%;
-    width: 70%;
+    width: 100%;
     position: absolute;
     left: 30%;
     top: 0;
